mcp: google sheets

--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ AGENT_GOAL=goal_event_flight_invoice
 #AGENT_GOAL=goal_match_train_invoice # for replay goal
 
 # Choose which goal categories are listed by the Agent Goal picker if enabled above
-# Options: system (always included), hr, travel-flights, travel-trains, fin, ecommerce, mcp-integrations, food, all
+# Options: system (always included), hr, travel-flights, travel-trains, fin, ecommerce, mcp-integrations, food, sheets, all
 GOAL_CATEGORIES=all
 #GOAL_CATEGORIES=travel-flights
 
